--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -15,7 +15,7 @@ $content-padding: 0 16px;
 // Fix: Слышь удоли ↑
 
 .header__wrap {
-	background-color: var(--color-main-back);
+	background-color: var(--color-dop-back);
 	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 	padding: $content-padding;
 	display: flex;
