--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -15,3 +15,5 @@ block content
                         a(href="main-page.html") Главная 
                     li 
                         a(href="broni.html") Мои брони и сделки 
+                    li 
+                        a(href="my-data.html") Мои данные 
