--- a/src/templates/pages/main-page.pug
+++ b/src/templates/pages/main-page.pug
@@ -45,7 +45,7 @@ block content
                     .main-slider__pagination
 
         .cont-block__wrap 
-            .cont-block
+            .cont-block.cont-block_mb70
                 nav.main-nav
                     ul.main-nav__list 
                         li.main-nav__item 
@@ -113,7 +113,7 @@ block content
                                         use(xlink:href="./assets/images/sprite.svg#icon-lock")
  
         .cont-block__wrap 
-            .cont-block.cont-block_m70
+            .cont-block.cont-block_mb70
                 h2.cont-block__h Новости
                 .news-block
                     a(href="").news-block__linc
