--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -2,3 +2,7 @@ header.header__wrap
     .header
         svg(width="96", height="35", data-logo)
             use(xlink:href="./assets/images/sprite.svg#main-logo")
+        
+        label.input-switch
+            input(type="checkbox", name="")#switch-dark.input-switch__input
+            .input-switch__mimic
