--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -17,3 +17,5 @@ block content
                         a(href="broni.html") Мои брони и сделки 
                     li 
                         a(href="my-data.html") Мои данные 
+                    li 
+                        a(href="help-doc.html") Помощь и документы
