--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -19,3 +19,5 @@ block content
                         a(href="my-data.html") Мои данные 
                     li 
                         a(href="help-doc.html") Помощь и документы
+                    li 
+                        a(href="zapis-na-priem.html") Запись на прием квартиры
