--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -21,3 +21,5 @@ block content
                         a(href="help-doc.html") Помощь и документы
                     li 
                         a(href="zapis-na-priem.html") Запись на прием квартиры
+                    li 
+                        a(href="kontact-obr.html") Контакты и обращения
