--- a/src/templates/pages/broni.pug
+++ b/src/templates/pages/broni.pug
@@ -88,7 +88,7 @@ block content
                                 li.bron-card-info__options-item 
                                     span Оплата брони
                                     span
-                                        .bron-card-info__options-item-ok
+                                        .small-icon_ok.bron-card-info__options-item-ok
                                             svg(width="14", height="14")
                                                 use(xlink:href="./assets/images/sprite.svg#icon-ок")
                                         span 20 000
@@ -181,7 +181,7 @@ block content
                                 li.bron-card-info__options-item 
                                     span Оплата брони
                                     span
-                                        .bron-card-info__options-item-ok
+                                        .small-icon_ok.bron-card-info__options-item-ok
                                             svg(width="14", height="14")
                                                 use(xlink:href="./assets/images/sprite.svg#icon-ок")
                                         span 20 000
@@ -304,7 +304,7 @@ block content
                                 li.bron-card-info__options-item 
                                     span Оплата брони
                                     span
-                                        .bron-card-info__options-item-ok
+                                        .small-icon_ok.bron-card-info__options-item-ok
                                             svg(width="14", height="14")
                                                 use(xlink:href="./assets/images/sprite.svg#icon-ок")
                                         span 20 000
