--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -23,3 +23,5 @@ block content
                         a(href="zapis-na-priem.html") Запись на прием квартиры
                     li 
                         a(href="kontact-obr.html") Контакты и обращения
+                    li 
+                        a(href="nps.html") NPS опрос дольщиков со своим URL адресом
