--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -6,9 +6,9 @@ block variables
 
 block content
     main
-        .cont-wrap 
-            .cont-box
-                ul
+        .cont-block__wrap 
+            .cont-block.cont-block_m70
+                ul(style="display: grid; grid-row-gap: 12px; font-weight: 300; font-size: 18px;")
                     li 
                         a(href="login.html") Войти 
                     li 
