--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -2,7 +2,7 @@ extends ../template
 
 block variables
     - var title = 'Войти'
-    - var header = false
+    - var header = true 
 
 block content
     main
