--- a/src/templates/pages/broni.pug
+++ b/src/templates/pages/broni.pug
@@ -18,7 +18,7 @@ block content
                         .bread-cru__linc Мои брони и сделк
 
         .cont-block__wrap 
-            .cont-block
+            .cont-block.cont-block_mb70
                 .bron-card
                     .bron-card-nav
                         button(data-tab-id="card1", data-tab-control="1").bron-card-nav__button-tab.active
