--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -18,6 +18,8 @@ block content
                     li 
                         a(href="my-data.html") Мои данные 
                     li 
+                        a(href="moi-pokupki.html") Мои покупки
+                    li 
                         a(href="help-doc.html") Помощь и документы
                     li 
                         a(href="zapis-na-priem.html") Запись на прием квартиры
