--- a/src/templates/pages/main-page.pug
+++ b/src/templates/pages/main-page.pug
@@ -15,10 +15,10 @@ block content
                                 .main-slider__text 
                                     span Добро пожаловать в личный кабинет покупателя ГК ФСК
                                 a(href="#").button.button_icon.main-slider__button
-                                    .main-slider__button-icon
+                                    .button-icon__icon
                                         svg(width="10", height="5")
                                             use(xlink:href="./assets/images/sprite.svg#icon-arrow")
-                                    span.main-slider__button-text Подробнее
+                                    span Подробнее
                                 svg(width="62", height="350").main-slider__content-right
                                     use(xlink:href="./assets/images/sprite.svg#slider-arrow")
                             img(src="./assets/images/slider1.jpg", alt="Добро пожаловать в личный кабинет покупателя ГК ФСК").main-slider__img
@@ -27,10 +27,10 @@ block content
                                 .main-slider__text 
                                     span Добро пожаловать в личный кабинет
                                 a(href="#").button.button_icon.main-slider__button
-                                    .main-slider__button-icon
+                                    .button-icon__icon
                                         svg(width="10", height="5")
                                             use(xlink:href="./assets/images/sprite.svg#icon-arrow")
-                                    span.main-slider__button-text Подробнее
+                                    span Подробнее
                                 svg(width="62", height="350").main-slider__content-right
                                     use(xlink:href="./assets/images/sprite.svg#slider-arrow")
                             img(src="./assets/images/slider2.jpg", alt="Добро пожаловать в личный кабинет покупателя ГК ФСК").main-slider__img
